--- a/HomeBudget3/App.config
+++ b/HomeBudget3/App.config
@@ -1,6 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
+
+  <connectionStrings>
+    <add name="HomeBudgetEntities" connectionString="metadata=res://*/HomeBudgetModel.csdl|res://*/HomeBudgetModel.ssdl|res://*/HomeBudgetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bestia\SQLEXPRESS;initial catalog=HomeBudget;persist security info=True;user id=HBUser;password=zaq1@WSX;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
 </configuration>
