--- a/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
+++ b/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
@@ -44,13 +44,32 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OutcomeMainTable.xaml.cs">
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OutcomeFilters.xaml.cs">
+      <DependentUpon>OutcomeFilters.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OutcomeMainTable.xaml.cs">
       <DependentUpon>OutcomeMainTable.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\OutcomeMainView.xaml.cs">
+      <DependentUpon>OutcomeMainView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="OutcomeMainTable.xaml">
+    <Page Include="Views\OutcomeFilters.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\OutcomeMainTable.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\OutcomeMainView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -64,6 +83,18 @@
       <Project>{6239d3e0-64a1-40dc-b675-09c833d8b05c}</Project>
       <Name>HomeBudget.DAL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
