--- a/HomeBudget.Common/HomeBudget.Common.csproj
+++ b/HomeBudget.Common/HomeBudget.Common.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Events\Filter.cs" />
+    <Compile Include="FilterCriteria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
