--- a/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
+++ b/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
@@ -49,6 +49,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\OutcomeMainTableViewModel.cs" />
     <Compile Include="Views\OutcomeFilters.xaml.cs">
       <DependentUpon>OutcomeFilters.xaml</DependentUpon>
     </Compile>
@@ -93,9 +94,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
