--- a/HomeBudget.Common/HomeBudget.Common.csproj
+++ b/HomeBudget.Common/HomeBudget.Common.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="NavigationController.cs" />
     <Compile Include="Events\Filter.cs" />
     <Compile Include="FilterCriteria.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
