Animation for overlapping new edit outcome window over main outcome Table

--- a/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
+++ b/HomeBudget.OutcomeModule/HomeBudget.OutcomeModule.csproj
@@ -34,6 +34,8 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +52,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\OutcomeMainTableViewModel.cs" />
+    <Compile Include="Views\EditOutcome.xaml.cs">
+      <DependentUpon>EditOutcome.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\OutcomeFilters.xaml.cs">
       <DependentUpon>OutcomeFilters.xaml</DependentUpon>
     </Compile>
@@ -62,6 +67,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Views\EditOutcome.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\OutcomeFilters.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -94,7 +103,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
