dodanie GetCategories, GetCategoryId. Proba przeslania serwisu do Editoutcome.

--- a/HomeBudget3/App.config
+++ b/HomeBudget3/App.config
@@ -6,6 +6,7 @@
 
   <connectionStrings>
     <add name="HomeBudgetEntities" connectionString="metadata=res://*/HomeBudgetModel.csdl|res://*/HomeBudgetModel.ssdl|res://*/HomeBudgetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bestia\SQLEXPRESS;initial catalog=HomeBudgetDev;persist security info=True;user id=HBUser;password=zaq1@WSX;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="HomeBudgetEntities" connectionString="metadata=res://*/HomeBudgetModel.csdl|res://*/HomeBudgetModel.ssdl|res://*/HomeBudgetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bestia\SQLEXPRESS;initial catalog=HomeBudget;persist security info=True;user id=HBUser;password=zaq1@WSX;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   
 </configuration>
